<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:context="com.example.android.celebritymiddlenamequiz.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/banner"
            android:scaleType="centerCrop"
            android:src="@drawable/banner"
            app:srcCompat="@drawable/banner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/jennifer_aniston"
                android:src="@drawable/ja" />

            <TextView
                android:id="@+id/question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/jennifer_aniston"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />


            <RadioGroup
                android:id="@+id/answers1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/a1" />

                <RadioButton
                    android:id="@+id/b1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/b1" />

                <RadioButton
                    android:id="@+id/c1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/c1" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/george_clooney"
                android:src="@drawable/gc" />

            <TextView
                android:id="@+id/question2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/george_clooney"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/answers2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/a2" />

                <RadioButton
                    android:id="@+id/b2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/b2" />

                <RadioButton
                    android:id="@+id/c2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/c2" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/courteney_cox"
                android:src="@drawable/cc" />

            <TextView
                android:id="@+id/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/courteney_cox"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/answers3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/a3" />

                <RadioButton
                    android:id="@+id/b3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/b3" />

                <RadioButton
                    android:id="@+id/c3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/c3" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tom_selleck"
                android:src="@drawable/ts" />

            <TextView
                android:id="@+id/question4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tom_selleck"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a4" />

            <CheckBox
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b4" />

            <CheckBox
                android:id="@+id/c4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/will_smith_jr"
                android:src="@drawable/ws" />

            <TextView
                android:id="@+id/question5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/will_smith_jr"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/a5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_here" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submitAnswers"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>
